--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         methods: {
             getScripts() {
                 return new Promise((resolve, reject) => {
-                    fetch("https://scripts.quhou.top/", {
+                    fetch("https://scripts-server.quhou.top/", {
                         method: "get"
                     }).then(res => {
                         res.json().then(res => {
