--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的油猴脚本</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <style>
         :root {
@@ -149,13 +150,22 @@
                     <th @click="sortByScore">评分</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody v-if="scripts.length > 0">
                 <tr v-for="(script,key) in scripts" :key="key">
                     <td><a :href="script.url" target="_blank">{{script.name}}</a></td>
                     <td>{{script.dailyInstalls}}</td>
                     <td>{{script.totalInstalls}}</td>
                     <td>{{script.updatedDate}}</td>
                     <td>{{script.score}}</td>
+                </tr>
+                </tbody>
+                <tbody v-else>
+                <tr>
+                    <td><a>...</a></td>
+                    <td>...</td>
+                    <td>...</td>
+                    <td>...</td>
+                    <td>...</td>
                 </tr>
                 </tbody>
             </table>
@@ -182,6 +192,9 @@
             this.sortByScore()
             console.log(res)
         },
+        computed: {
+
+        },
         methods: {
             getScripts() {
                 return new Promise((resolve, reject) => {
@@ -195,6 +208,7 @@
                 })
             },
             handleFlash() {
+                this.scripts = []
                 this.flashing = true
                 this.getScripts().then(res => {
                     this.scripts = res
