--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的油猴脚本</title>
+    <meta name="description" content="xygod的油猴脚本合集，涵盖自动翻译、B站增强、B站IP显示等功能">
+    <meta name="keywords" content="油猴脚本, xygod脚本, B站增强, 自动翻译脚本, B站IP显示, 浏览器插件">
+    <meta name="author" content="xygod屈侯">
+    <meta name="robots" content="index, follow">
+
+    <!-- 社交媒体分享优化 -->
+    <meta property="og:title" content="优质油猴脚本合集 - 提升浏览器体验">
+    <meta property="og:description"
+          content="xygod屈侯的多款实用油猴脚本：B站增强、自动翻译、B站IP显示等！">
+    <meta property="og:image" content="https://scripts.quhou.top/favicon.png">
+    <meta property="og:url" content="https://scripts.quhou.top/">
+    <meta property="og:type" content="油猴Greasemonkey插件">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="https://scripts.quhou.top/favicon.png">
+    <meta name="twitter:title" content="xygod屈侯提供的精选油猴脚本合集">
+    <meta name="twitter:description" content="提供实用油猴脚本，包括自动翻译、B站增强功能等，让你的浏览器更强大！">
+    <meta name="twitter:image" content="https://scripts.quhou.top/favicon.png">
+    <title>xygod的油猴脚本</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <style>
@@ -136,7 +154,7 @@
 <div class="container">
     <div id="app">
         <div class="big-title">
-            <h1>我的油猴脚本</h1>
+            <h1>xygod的油猴脚本</h1>
             <img src="flash.png" alt="" :class="['flash-icon',{ active:flashing }]" @click="handleFlash">
         </div>
         <div class="table-container">
@@ -192,9 +210,7 @@
             this.sortByScore()
             console.log(res)
         },
-        computed: {
-
-        },
+        computed: {},
         methods: {
             getScripts() {
                 return new Promise((resolve, reject) => {
