add google site

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <meta name="twitter:title" content="xygod屈侯提供的精选油猴脚本合集">
     <meta name="twitter:description" content="提供实用油猴脚本，包括自动翻译、B站增强功能等，让你的浏览器更强大！">
     <meta name="twitter:image" content="https://scripts.quhou.top/favicon.png">
+    <!-- 谷歌站点搜索-->
+    <meta name="google-site-verification" content="2lRLViFSbm0wBdJSeUIbSscy0x2t2W-ZoCZeGEh_7OI"/>
     <title>xygod的油猴脚本</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
