--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         console.log(err)
                         resolve([{
                             "name": err.message,
-                            "url": "出现错误",
+                            "url": "#",
                             "updatedDate": "错误",
                             "score": "999",
                             "dailyInstalls": "99999",
