add google site

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="xygod的油猴脚本合集涵盖自动翻译、B站增强、B站IP显示等功能">
-    <meta name="keywords" content="quhou,油猴脚本,xygod脚本,B站增强,自动翻译脚本,B站IP显示,浏览器插件">
-    <meta name="author" content="xygod屈侯">
+    <meta name="description" content="quhou屈侯的油猴脚本的大合集,涵盖自动翻译、B站增强、B站IP显示等功能">
+    <meta name="keywords" content="quhou,quhou脚本,屈侯脚本,屈侯,油猴脚本,xygod脚本,B站增强,自动翻译脚本,B站IP显示,浏览器插件">
+    <meta name="author" content="quhou屈侯xygod">
     <meta name="robots" content="index, follow">
 
     <!-- 社交媒体分享优化 -->
     <meta property="og:title" content="xygod屈侯提供的精选油猴脚本合集">
     <meta property="og:site_name" content="xygod屈侯提供的精选油猴脚本合集">
-    <meta property="og:description" content="xygod屈侯的多款实用油猴脚本：B站增强、自动翻译、B站IP显示等！">
+    <meta property="og:description" content="xygosd屈侯的多款实用油猴脚本：B站增强、自动翻译、B站IP显示等！">
     <meta property="og:image" content="https://scripts.quhou.top/favicon.png">
     <meta property="og:url" content="https://scripts.quhou.top/">
     <meta property="og:type" content="website">
